# FlexibleSUSY

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.md  README.md  SM.ref  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled7.ipynb  configure  make.MSSM.log.REMOVED.git-id
addons/GM2Calc/: CMakeLists.txt
config/: CMakeLists.txt  Makefile.in  config.h.in  config_cmake.h.in  flexiblesusy-config.in
fflite/: CMakeLists.txt
meta/: AMuon.m  BetaFunction.m  CConversion.m  CMakeLists.txt  CXXDiagrams.m  ColorMathInterface.m  Decays.m  EDM.m  EffectiveCouplings.m  FSMathLink.m  FlexibleSUSY.m  FunctionModifiers.m  Parameters.m  SelfEnergies.m  SemiAnalytic.m  TreeMasses.m  Utils.m  Vertices.m  WriteOut.m  module.mk
meta/MSSM/: CMakeLists.txt
meta/SM/: CMakeLists.txt
meta/THDM/: CMakeLists.txt
model_specific/MSSM_higgs/: CMakeLists.txt
model_specific/MSSM_thresholds/: CMakeLists.txt
model_specific/NMSSM_higgs/: CMakeLists.txt
model_specific/SM/: CMakeLists.txt
model_specific/SplitMSSM/: CMakeLists.txt
models/: CMakeLists.txt
models/CNMSSM/: CNMSSM_a_muon.cpp  CNMSSM_a_muon.d  CNMSSM_a_muon.hpp  CNMSSM_convergence_tester.hpp  CNMSSM_edm.cpp  CNMSSM_edm.d  CNMSSM_edm.hpp  CNMSSM_effective_couplings.cpp  CNMSSM_effective_couplings.d  CNMSSM_effective_couplings.hpp  CNMSSM_ewsb_solver.hpp  CNMSSM_ewsb_solver_interface.hpp  CNMSSM_high_scale_constraint.hpp  CNMSSM_info.cpp  CNMSSM_info.d  CNMSSM_info.hpp  CNMSSM_initial_guesser.hpp  CNMSSM_input_parameters.cpp  CNMSSM_input_parameters.d  CNMSSM_input_parameters.hpp  CNMSSM_librarylink.cpp  CNMSSM_librarylink.d  CNMSSM_librarylink.m  CNMSSM_low_scale_constraint.hpp  CNMSSM_mass_eigenstates.cpp  CNMSSM_mass_eigenstates.d  CNMSSM_mass_eigenstates.hpp  CNMSSM_model.hpp  CNMSSM_model_slha.hpp  CNMSSM_observables.cpp  CNMSSM_observables.d  CNMSSM_observables.hpp  CNMSSM_physical.cpp  CNMSSM_physical.d  CNMSSM_physical.hpp  CNMSSM_plot_rgflow.gnuplot  CNMSSM_plot_spectrum.gnuplot  CNMSSM_references.tex  CNMSSM_semi_analytic_convergence_tester.cpp  CNMSSM_semi_analytic_convergence_tester.d  (+126 more)
models/CNMSSMEFTHiggs/: CNMSSMEFTHiggs_a_muon.cpp  CNMSSMEFTHiggs_a_muon.d  CNMSSMEFTHiggs_a_muon.hpp  CNMSSMEFTHiggs_convergence_tester.hpp  CNMSSMEFTHiggs_edm.cpp  CNMSSMEFTHiggs_edm.d  CNMSSMEFTHiggs_edm.hpp  CNMSSMEFTHiggs_effective_couplings.cpp  CNMSSMEFTHiggs_effective_couplings.d  CNMSSMEFTHiggs_effective_couplings.hpp  CNMSSMEFTHiggs_ewsb_solver.hpp  CNMSSMEFTHiggs_ewsb_solver_interface.hpp  CNMSSMEFTHiggs_high_scale_constraint.hpp  CNMSSMEFTHiggs_info.cpp  CNMSSMEFTHiggs_info.d  CNMSSMEFTHiggs_info.hpp  CNMSSMEFTHiggs_initial_guesser.hpp  CNMSSMEFTHiggs_input_parameters.cpp  CNMSSMEFTHiggs_input_parameters.d  CNMSSMEFTHiggs_input_parameters.hpp  CNMSSMEFTHiggs_librarylink.cpp  CNMSSMEFTHiggs_librarylink.d  CNMSSMEFTHiggs_librarylink.m  CNMSSMEFTHiggs_low_scale_constraint.hpp  CNMSSMEFTHiggs_mass_eigenstates.cpp  CNMSSMEFTHiggs_mass_eigenstates.d  CNMSSMEFTHiggs_mass_eigenstates.hpp  CNMSSMEFTHiggs_matching_constraint.hpp  CNMSSMEFTHiggs_model.hpp  CNMSSMEFTHiggs_model_slha.hpp  CNMSSMEFTHiggs_observables.cpp  CNMSSMEFTHiggs_observables.d  CNMSSMEFTHiggs_observables.hpp  CNMSSMEFTHiggs_physical.cpp  CNMSSMEFTHiggs_physical.d  CNMSSMEFTHiggs_physical.hpp  CNMSSMEFTHiggs_plot_rgflow.gnuplot  CNMSSMEFTHiggs_plot_spectrum.gnuplot  CNMSSMEFTHiggs_references.tex  CNMSSMEFTHiggs_semi_analytic_convergence_tester.cpp  (+133 more)
models/MSSM/: FlexibleSUSY.m  LesHouches.in.MSSM_generated  LesHouches.out.MSSM  MSSM_a_muon.cpp  MSSM_a_muon.d  MSSM_a_muon.hpp  MSSM_convergence_tester.hpp  MSSM_edm.cpp  MSSM_edm.d  MSSM_edm.hpp  MSSM_effective_couplings.cpp  MSSM_effective_couplings.d  MSSM_effective_couplings.hpp  MSSM_ewsb_solver.hpp  MSSM_ewsb_solver_interface.hpp  MSSM_high_scale_constraint.hpp  MSSM_info.cpp  MSSM_info.d  MSSM_info.hpp  MSSM_initial_guesser.hpp  MSSM_input_parameters.cpp  MSSM_input_parameters.d  MSSM_input_parameters.hpp  MSSM_librarylink.cpp  MSSM_librarylink.d  MSSM_librarylink.m  MSSM_low_scale_constraint.hpp  MSSM_mass_eigenstates.cpp  MSSM_mass_eigenstates.d  MSSM_mass_eigenstates.hpp  MSSM_model.hpp  MSSM_model_slha.hpp  MSSM_observables.cpp  MSSM_observables.d  MSSM_observables.hpp  MSSM_physical.cpp  MSSM_physical.d  MSSM_physical.hpp  MSSM_references.tex  MSSM_slha_io.cpp  (+97 more)
models/NMSSM/: FlexibleEFTHiggs.mk  FlexibleSUSY.m  LesHouches.in.NMSSM  LesHouches.in.NMSSM_generated  LesHouches.out.NMSSM  NMSSM_EWSB_equations.m  NMSSM_a_muon.cpp  NMSSM_a_muon.d  NMSSM_a_muon.hpp  NMSSM_convergence_tester.hpp  NMSSM_edm.cpp  NMSSM_edm.d  NMSSM_edm.hpp  NMSSM_effective_couplings.cpp  NMSSM_effective_couplings.d  NMSSM_effective_couplings.hpp  NMSSM_ewsb_solver.hpp  NMSSM_ewsb_solver_interface.hpp  NMSSM_info.cpp  NMSSM_info.d  (+136 more)
src/: CMakeLists.txt  build_info.cpp  concatenate.hpp  cxx_qft_generic_fields.hpp  cxx_qft_generic_vertices.hpp  decay.cpp  decay.hpp  decay_amplitudes.cpp  decay_amplitudes.hpp  decays_loop_corrections.hpp  decays_problems.hpp  effective_couplings.cpp  effective_couplings.hpp  field_traits.hpp  generic_vertices.cpp  generic_vertices.hpp  memory.hpp  module.mk  multiindex.hpp  numerics2.hpp  one_loop_decay_diagrams.cpp  one_loop_decay_diagrams.hpp  pv.cpp  pv.hpp  renormalization_scheme.hpp  scan.hpp  slha_formatting.hpp  slha_io.cpp  slha_io.hpp  spectrum_generator_settings.cpp  spectrum_generator_settings.hpp  two_body_decays.cpp  two_body_decays.hpp  wrappers.hpp
test/: CMakeLists.txt  module.mk  test.hpp  test_CMSSM.hpp  test_CMSSMNoFV_FlexibleDecays.cpp  test_CMSSM_FlexibleDecays.cpp  test_CMSSM_mass_eigenstates_decoupling_scheme.cpp  test_FlavorAligned2HDM_FlexibleDecays.cpp  test_MRSSM2_FlexibleDecays.cpp  test_MRSSM_SARAH.m  test_MRSSM_TreeMasses.m  test_MSSM.hpp  test_MSSMCPV_SARAH.m  test_MSSMCPV_TreeMasses.m  test_MSSM_FlexibleDecays.cpp  test_SM_FlexibleDecays.cpp  test_SM_mass_eigenstates_decoupling_scheme.cpp  test_SM_mass_eigenstates_interface.cpp  test_SM_tree_level_spectrum.cpp  test_linalg2.cpp  test_numerics.cpp  test_pv_crosschecks.cpp  test_two_body_decays.cpp
(+162 files in other folders)
