add_library(flexisusy
  betafunction.cpp
  build_info.cpp
  bvp_solver_problems.cpp
  ckm.cpp
  command_line_options.cpp
  composite_convergence_tester.cpp
  database.cpp
  dilog.cpp
  dilogc.f
  effective_couplings.cpp
  global_thread_pool.cpp
  gm2calc_interface.cpp
  gsl_utils.cpp
  gsl_vector.cpp
  lowe.cpp
  sfermions.cpp
  numerics.cpp
  numerics2.cpp
  physical_input.cpp
  pmns.cpp
  problems.cpp
  pv.cpp
  rkf_integrator.cpp
  scan.cpp
  slha_io.cpp
  spectrum_generator_problems.cpp
  spectrum_generator_settings.cpp
  string_utils.cpp
  threshold_corrections.cpp
  threshold_loop_functions.cpp
  weinberg_angle.cpp
  wrappers.cpp
)

target_link_libraries(flexisusy
  Eigen3::Eigen
  FlexibleSUSY::config
  FlexibleSUSY::slhaea)

add_library(FlexibleSUSY::flexisusy ALIAS flexisusy)
